# adp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-CODE  LICENSE-SPEC  Makefile  PROJECT.md  README.md  SECURITY.md  TRADEMARK-POLICY.md  impressum.html  index.html  legal.html  privacy.html  vercel.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  rfc_proposal.md
.github/workflows/: ci.yml  validate-schemas.yml
Luca/projects/apideals/: .gitignore  ADP-V0.2.0-INDEX.md  LICENSE  README.md
docs/: faq.md  implementation-guide.md  security-considerations.md
scripts/: prerelease-check.sh  validate.py
sdk/python/: README.md  pyproject.toml
sdk/python/adp_sdk/: __init__.py  client.py  exceptions.py  models.py  validator.py
sdk/python/tests/: test_client.py  test_models.py  test_validator.py
sdk/typescript/: .gitignore  package-lock.json  package.json  tsconfig.json
sdk/typescript/scripts/: validate-examples.ts
sdk/typescript/src/: index.ts  types.ts  validator.ts
sdk/typescript/tests/: validator.test.ts
spec/v0.1/: README.md  protocol.md
spec/v0.1/examples/: deal-error.json  deal-intent-basic.json  deal-offer-basic.json  deal-request-basic.json  well-known-adp.json
spec/v0.1/schemas/: adp-header.schema.json  compliance.schema.json  deal-error.schema.json  deal-intent.schema.json  deal-offer.schema.json  deal-request.schema.json  pricing.schema.json  well-known-adp.schema.json
spec/v0.2/: README.md  auth.md  http-binding.md  pricing-multimodal.md
spec/v0.2/examples/: deal-error-rate-limited.json  (+8 more)
(+27 files in other folders)
