[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "adp-sdk"
version = "0.2.0"
description = "Python SDK for the Agent Deal Protocol (ADP) v0.2"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["adp", "agent", "deal", "protocol", "llm", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
]

[project.urls]
Homepage = "https://github.com/vanhuelsing/adp"
Documentation = "https://github.com/vanhuelsing/adp/tree/main/sdk/python"
Repository = "https://github.com/vanhuelsing/adp"
Issues = "https://github.com/vanhuelsing/adp/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["adp_sdk*"]

[tool.setuptools.package-data]
adp_sdk = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
